Submitted version of DDT proposal

--- a/proposal/2021A/DDT/tess_luhman16/GemPhase1_US.tex
+++ b/proposal/2021A/DDT/tess_luhman16/GemPhase1_US.tex
@@ -108,7 +108,7 @@ One of the biggest unsolved problems in brown dwarf evolution remains the trigge
     \centering{\includegraphics[scale=0.45]{figures/intuition_demo01.png}}  
 
     \centering{\includegraphics[scale=0.45]{figures/intuition_demo02.png}}
-    \caption{Demo of the \texttt{intuition} framework that provides human-in-the-loop fitting of IGRINS spectra to self-consistent physical models of brown dwarfs.  We will use two complementary approaches to analyze the IGRINS spectra: a Bayesian MCMC approach called Starfish (not shown) and this human-in-the-loop approach.  This quick-look tool provides crucial initial guesses and physical insight.  In these snapshots, a user has decreased the $T_{\mathrm{eff}}$ by 100 K from top to bottom panels, instantaneously resulting in a different spectral appearance at 1.705 and 1.722 $\mu m$.  Both approaches employ the Sonora pre-computed synthetic spectral models, depicted here.  The powerful combination of these approaches accelerates the analysis phase of the project.}
+    \caption{Demo of the \texttt{intuition} framework that provides human-in-the-loop fitting of IGRINS spectra to self-consistent physical models of brown dwarfs.  We will use two complementary approaches to analyze the IGRINS spectra: a Bayesian MCMC approach called Starfish (not shown) and this human-in-the-loop approach.  This quick-look tool provides crucial initial guesses and physical insight.  In these snapshots, a user has decreased the $T_{\mathrm{eff}}$ by 100 K from top to bottom panels, instantaneously resulting in a different spectral appearance at 1.705 and 1.722 $\mu m$.  Both approaches employ the Sonora pre-computed synthetic spectral models, depicted here.  We will parameterize the clouds with properties like grain sedimentation and coverage area.  The powerful combination of these approaches accelerates the analysis phase of the project.}
 \end{figure}
 
   
