:goal_net: acknowledgement changed in aastex6.3.1

--- a/document/paper1/ms.tex
+++ b/document/paper1/ms.tex
@@ -1,4 +1,4 @@
-\documentclass{aastex63}
+\documentclass{aastex631}
 \bibliographystyle{aasjournal}
 
 \usepackage{graphicx}
@@ -35,13 +35,24 @@ We disentangle clouds on the nearby brown dwarf Luhman 16 using multi-epoch IGRI
 
 \section{Introduction}\label{sec:intro}
 
+Here is an annotated bibliography.
+
+\begin{deluxetable}{chc}
+  \tablehead{
+  \colhead{one} & \nocolhead{two} & \colhead{three}
+  }
+  \startdata
+  a&b&c\\
+  \enddata
+\end{deluxetable}
+
 
 \section{Methodology}
 We used IGRINS \citep{park14,2018SPIE10702E..0QM}, reduced with the \texttt{plp} \citep{jaejoonlee16}.
 
 
 
-\acknowledgements
+\begin{acknowledgements}
 Based on observations obtained at the international Gemini Observatory, a program of NSF’s NOIRLab, which is managed by the Association of Universities for Research in Astronomy (AURA) under a cooperative agreement with the National Science Foundation. on behalf of the Gemini Observatory partnership: the National Science Foundation (United States), National Research Council (Canada), Agencia Nacional de Investigaci\'{o}n y Desarrollo (Chile), Ministerio de Ciencia, Tecnolog\'{i}a e Innovaci\'{o}n (Argentina), Minist\'{e}rio da Ci\^{e}ncia, Tecnologia, Inova\c{c}\~{o}es e Comunica\c{c}\~{o}es (Brazil), and Korea Astronomy and Space Science Institute (Republic of Korea).
 
 This work used the Immersion Grating Infrared Spectrometer (IGRINS) that was developed under a collaboration between the University of Texas at Austin and the Korea Astronomy and Space Science Institute (KASI) with the financial support of the Mt. Cuba Astronomical Foundation, of the US National Science Foundation under grants AST-1229522 and AST-1702267, of the McDonald Observatory of the University of Texas at Austin, of the Korean GMT Project of KASI, and Gemini Observatory.
@@ -49,6 +60,7 @@ This work used the Immersion Grating Infrared Spectrometer (IGRINS) that was dev
 This paper includes data collected by the TESS mission. Funding for the TESS mission is provided by the NASA's Science Mission Directorate.
 
 The authors acknowledge the Texas Advanced Computing Center (TACC, \url{http://www.tacc.utexas.edu}) at The University of Texas at Austin for providing HPC resources that have contributed to the research results reported within this paper.
+\end{acknowledgements}
 
 \clearpage
 
