start an annotated biblography

--- a/document/paper1/ms.tex
+++ b/document/paper1/ms.tex
@@ -42,7 +42,9 @@ Here is an annotated bibliography.
   \colhead{one} & \nocolhead{two} & \colhead{three}
   }
   \startdata
-  a&b&c\\
+  \citet{2013ApJ...767L...1L} & - & Discovery paper\\
+  \citet{2021ApJ...906...64A} & - & TESS data \\
+  \citet{2016ApJ...825...90K} & - & HST Time-resolved spectroscopy maps\\
   \enddata
 \end{deluxetable}
 
