--- a/document/paper1/ms.bib
+++ b/document/paper1/ms.bib
@@ -5052,3 +5052,63 @@ I. Clear and Cloudy Atmospheres}},
   adsurl    = {https://ui.adsabs.harvard.edu/abs/2018SPIE10702E..0QM},
   adsnote   = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@article{2013ApJ...767L...1L,
+  author        = {{Luhman}, K.~L.},
+  title         = {{Discovery of a Binary Brown Dwarf at 2 pc from the Sun}},
+  journal       = {\apjl},
+  keywords      = {brown dwarfs, infrared: stars, proper motions, solar neighborhood, stars: low-mass, Astrophysics - Astrophysics of Galaxies, Astrophysics - Solar and Stellar Astrophysics},
+  year          = 2013,
+  month         = apr,
+  volume        = {767},
+  number        = {1},
+  eid           = {L1},
+  pages         = {L1},
+  doi           = {10.1088/2041-8205/767/1/L1},
+  archiveprefix = {arXiv},
+  eprint        = {1303.2401},
+  primaryclass  = {astro-ph.GA},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2013ApJ...767L...1L},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{2021ApJ...906...64A,
+  author        = {{Apai}, D{\'a}niel and {Nardiello}, Domenico and {Bedin}, Luigi R.},
+  title         = {{TESS Observations of the Luhman 16 AB Brown Dwarf System: Rotational Periods, Lightcurve Evolution, and Zonal Circulation}},
+  journal       = {\apj},
+  keywords      = {Exoplanet atmospheres, Atmospheric circulation, T dwarfs, Atmospheric variability, Stellar rotation, Photometry, 487, 112, 1679, 2119, 1629, 1234, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+  year          = 2021,
+  month         = jan,
+  volume        = {906},
+  number        = {1},
+  eid           = {64},
+  pages         = {64},
+  doi           = {10.3847/1538-4357/abcb97},
+  archiveprefix = {arXiv},
+  eprint        = {2101.02253},
+  primaryclass  = {astro-ph.EP},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2021ApJ...906...64A},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{2016ApJ...825...90K,
+  author        = {{Karalidi}, Theodora and {Apai}, D{\'a}niel and {Marley}, Mark S. and {Buenzli}, Esther},
+  title         = {{Maps of Evolving Cloud Structures in Luhman 16AB from HST Time-resolved Spectroscopy}},
+  journal       = {\apj},
+  keywords      = {methods: statistical, stars: individual: WISE J104915.57-531906.1, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics},
+  year          = 2016,
+  month         = jul,
+  volume        = {825},
+  number        = {2},
+  eid           = {90},
+  pages         = {90},
+  doi           = {10.3847/0004-637X/825/2/90},
+  archiveprefix = {arXiv},
+  eprint        = {1605.01682},
+  primaryclass  = {astro-ph.EP},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2016ApJ...825...90K},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
