:memo: tiny changes to manuscript

--- a/document/paper1/ms.tex
+++ b/document/paper1/ms.tex
@@ -1,17 +1,11 @@
-\documentclass{aastex631}
+\documentclass[modern]{aastex631}
 \bibliographystyle{aasjournal}
-
-\usepackage{graphicx}
-%\usepackage[caption=false]{subfig}
-\usepackage{amsmath}
-\usepackage{booktabs}
 
 \usepackage{fontspec}
 \usepackage[T1]{fontenc}
 \usepackage{newtxsf}
-\setmainfont{Fira Sans Book}[Scale=1.05]
+\setmainfont{Fira Sans Book}[Scale=1.0]
 
-\let\pwiflocal=\iffalse \let\pwifjournal=\iffalse
 
 \begin{document}
 \shorttitle{Brown dwarf clouds with TESS and IGRINS}
@@ -67,7 +61,7 @@ The authors acknowledge the Texas Advanced Computing Center (TACC, \url{http://w
 \clearpage
 
 
-\facilities{Keck (NIRSPEC), Gaia}
+\facilities{Gemini South (IGRINS), TESS}
 
 \software{  pandas \citep{mckinney10, reback2020pandas},
   emcee \citep{foreman13},
