:card_file_box: Save the lightcurve file to fits

--- a/notebooks/05_custom_lightkurve_extraction.ipynb
+++ b/notebooks/05_custom_lightkurve_extraction.ipynb
@@ -57,7 +57,7 @@
       "text/html": [
        "SearchResult containing 1 data products.\n",
        "\n",
-       "<table id=\"table139975896447376\">\n",
+       "<table id=\"table140604730714256\">\n",
        "<thead><tr><th>#</th><th>mission</th><th>year</th><th>author</th><th>exptime</th><th>target_name</th><th>distance</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th>s</th><th></th><th>arcsec</th></tr></thead>\n",
        "<tr><td>0</td><td>TESS Sector 10</td><td>2019</td><td><a href='https://mast.stsci.edu/tesscut/'>TESScut</a></td><td>1426</td><td>Luhman 16</td><td>0.0</td></tr>\n",
@@ -356,7 +356,38 @@
    "id": "subtle-garage",
    "metadata": {},
    "source": [
-    "Great!  We get about the same answer."
+    "Great!  We get about the same answer.  Let's save our lightcurve to a file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "comparative-alberta",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aperture_mask.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dressed-emission",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrected_lc.to_fits(path='../data/TESS/lightkurve_custom_4pixel.fits', aperture_mask=aperture_mask)"
    ]
   }
  ],
