--- a/document/paper1/ms.bib
+++ b/document/paper1/ms.bib
@@ -5112,3 +5112,22 @@ I. Clear and Cloudy Atmospheres}},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@article{2018A&A...618A.111L,
+  author        = {{Lazorenko}, P.~F. and {Sahlmann}, J.},
+  title         = {{Updated astrometry and masses of the LUH 16 brown dwarf binary}},
+  journal       = {\aap},
+  keywords      = {astrometry, brown dwarfs, binaries: visual, parallaxes, stars: individual: WISE J104915.57-531906.1, Astrophysics - Solar and Stellar Astrophysics},
+  year          = 2018,
+  month         = oct,
+  volume        = {618},
+  eid           = {A111},
+  pages         = {A111},
+  doi           = {10.1051/0004-6361/201833626},
+  archiveprefix = {arXiv},
+  eprint        = {1808.07835},
+  primaryclass  = {astro-ph.SR},
+  adsurl        = {https://ui.adsabs.harvard.edu/abs/2018A&A...618A.111L},
+  adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
