:memo: writing prose and an outline sketch for some discussion topics

--- a/document/paper1/ms.bib
+++ b/document/paper1/ms.bib
@@ -5131,3 +5131,21 @@ I. Clear and Cloudy Atmospheres}},
   adsnote       = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{2017MNRAS.470.1140B,
+       author = {{Bedin}, L.~R. and {Pourbaix}, D. and {Apai}, D. and {Burgasser}, A.~J. and {Buenzli}, E. and {Boffin}, H.~M.~J. and {Libralato}, M.},
+        title = "{Hubble Space Telescope astrometry of the closest brown dwarf binary system - I. Overview and improved orbit$^{★}$}",
+      journal = {\mnras},
+     keywords = {astrometry, binaries: visual, brown dwarfs, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2017,
+        month = sep,
+       volume = {470},
+       number = {1},
+        pages = {1140-1155},
+          doi = {10.1093/mnras/stx1177},
+archivePrefix = {arXiv},
+       eprint = {1706.00657},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.470.1140B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
